--- a/Homepage/homepage.css
+++ b/Homepage/homepage.css
@@ -239,3 +239,21 @@ footer {
     font-size:16px;
     font-display:auto;
 }
+.sp {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px; 
+}
+
+.sp img {
+    width: 100%; 
+    height: auto; 
+}
+
+.button-add, .sp-c {
+    width: 100%; 
+    text-align: center; 
+}
+
