--- a/Moi/data/css/footer.css
+++ b/Moi/data/css/footer.css
@@ -124,7 +124,7 @@ html {
 /*----------------------------------------------*/
 
 /* Content */
-.container {
+.noidung {
     display: flex;
     flex-direction: column;
     font-size: 1.4rem;
@@ -134,7 +134,6 @@ html {
     max-width: 100%;
     height: auto;
     max-height: 100%;
-    border: 2px solid black;
 }
 
 .chinh-sach {
@@ -156,8 +155,6 @@ html {
     border: 1px solid red;
 }
 
-.nd__chinh-sach ul li {
-}
 
    
 /*----------------------------------------------*/
