--- a/Moi/data/css/main.css
+++ b/Moi/data/css/main.css
@@ -182,6 +182,8 @@ html {
                 width: 100%;
                 height: 450px;
                 display: flex;
+                grid-template-columns: 2fr;
+                gap: 24px;
             }
 
                 .img2, .img3 {
@@ -382,6 +384,7 @@ html {
 
         .container__text-img {
             display: grid;
+            justify-content: center;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 24px;
             margin: 2rem 0rem;
@@ -409,7 +412,7 @@ html {
                     .text__img2 img,
                     .text__img3 img {
                         width: 100%;
-                        height: 468px;
+                        height: 700px;
                         object-fit: cover;
                     }
 
@@ -448,7 +451,6 @@ html {
         width: 45%px;
         height: 70px;
         margin: 1rem;
-        border: 2px solid black;
         box-sizing: border-box;
     }
 
@@ -644,4 +646,5 @@ html {
                     justify-content: flex-start;
                     padding-left: 2rem;
             }
+        }
 /*----------------------------------------------*/
