--- a/Homepage/data/css/main.css
+++ b/Homepage/data/css/main.css
@@ -50,7 +50,7 @@ html {
     border-radius: 1px;
 }
     /* Tên Shop */
-    .name {
+    .name1 {
     font-size: 3rem;
     margin-left: -40px;
     color: var(--black1-color);
