--- a/Homepage/data/css/main.css
+++ b/Homepage/data/css/main.css
@@ -182,6 +182,7 @@ html {
                 width: 100%;
                 height: 450px;
                 display: flex;
+                justify-content: center;
             }
 
                 .img2, .img3 {
